# loop-memory

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: secret-scan.yml  tests.yml
docs/: agent-memory-api.md  api.md  architecture.md  auto-capture.md  codex-context-tips.md  providers.md  universal-agent-memory.md  weekly-research-automation.md
loop_memory/: __init__.py  sdk.py  sdk_extensions.py
loop_memory/backends/: __init__.py  embedding.py  sentence_embedder.py  vector_store.py
loop_memory/cli/: _common.py  main.py
loop_memory/cli/commands/: __init__.py  cognitive.py  diag.py  graph.py  hooks.py  read.py  serve.py  write.py
loop_memory/engine/: loop.py  reflect.py
loop_memory/examples/: demo.py
loop_memory/export/: __init__.py  memory_md.py
loop_memory/graph/: build.py  extract.py
loop_memory/ingest/: loader.py  pipeline.py
loop_memory/jobs/: cognitive.py  compact.py  consolidate.py  contradiction.py  evolution.py  graph.py  llm_compact_pass.py  llm_consolidate.py  scheduler.py
loop_memory/llm/: base.py  openai_adapter.py  providers.py
loop_memory/mcp/: __init__.py
loop_memory/memory/: types.py
loop_memory/privacy/: __init__.py  private.py  redact.py
loop_memory/security/: __init__.py  secrets.py
loop_memory/serve/: app.py  handlers.py  watcher.py
loop_memory/serve/static/: index.html
loop_memory/serve/static/css/: app.css  layout.css
loop_memory/serve/static/i18n/: en.json  zh.json
loop_memory/serve/static/js/: App.js  api.js  main.js  store.js
loop_memory/serve/static/js/components/: Dashboard.js  Diagnostic.js  IngestPopover.js  KnowledgeGraph.js  RunStrip.js  Settings.js  Sidebar.js  Tabs.js  Timeline.js  Toast.js  TopBar.js  Wiki.js  WikiEditor.js
loop_memory/serve/static/js/composables/: useI18n.js
loop_memory/storage/: __init__.py  retrieval.py  sqlite_store.py
scripts/: codex_config_tune.py  codex_session_audit.py  install_weekly_research_launchd.sh  scan_secrets.py  weekly_research_update.sh
skills/loop-memory-context/: SKILL.md
tests/: test_agent_memory_api.py  test_agent_memory_sdk.py  test_cli_v7.py  test_contradictions.py  test_evolution.py  test_evolution_quality.py  test_expanduser.py  test_export_ask.py  test_graph.py  test_ingest.py  test_llm_consolidator.py  test_llm_providers.py  test_llm_test_endpoint.py  test_loop.py  test_mcp.py  test_openclaw_loader.py  test_reflection.py  test_score_api.py  test_scoring_v2.py  test_secrets.py  test_serve_app.py  test_serve_handlers.py  test_session_order.py  test_store.py  test_summarization.py  test_universal_memory.py  test_vector_store.py  test_watcher.py
